--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
@@ -7,6 +9,14 @@ body,
 #root {
   height: 100vh;
   margin: 0;
+  font-size: 1.6rem;
+}
+body,
+input,
+select,
+button,
+textarea {
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
 }
 
@@ -21,28 +31,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-a:hover{
+a:hover {
   color: #ff8000;
 }
-header{
+header {
   grid-area: header;
   background-color: #203040;
   display: flex;
   align-items: center;
-  padding: .5rem;
+  padding: 0.5rem;
 }
-header a{
+header a {
   color: white;
   text-decoration: none;
 }
-main{
+a {
+  text-decoration: none;
+}
+main {
   grid-area: main;
 }
-footer{
+footer {
   grid-area: footer;
   background-color: #203040;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main {
+  flex: 3 60rem;
+}
+.sidebar {
+  flex: 1 20rem;
 }
