--- a/src/componets/cart/cart.css
+++ b/src/componets/cart/cart.css
@@ -4,7 +4,7 @@
 }
 .horizontal-line {
   border-bottom: 2px solid rgba(128, 128, 128, 0.459);
-  margin: 0 20px 0 0;
+  margin: 0 20px 0 20px;
 }
 
 .cart {
@@ -44,4 +44,29 @@
 .total > div,
 .total > button {
   flex: 1;
+}
+form {
+  width: 100%;
+}
+
+/*form*/
+.checkout-header {
+  width: 100%;
+  margin: 2rem 14rem;
+  font-size: larger;
+}
+
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
 }
