--- a/src/componets/product/products.css
+++ b/src/componets/product/products.css
@@ -48,3 +48,32 @@
 .button.primary {
   background-color: #f0c040;
 }
+.button.primary.modal {
+  background-color: #f0c040;
+  margin-top: 20px;
+}
+/* Product Details */
+.product-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-height: 96vh;
+}
+.product-details img {
+  max-height: 100vh;
+  max-width: 46rem;
+  margin: 0 auto;
+}
+.product-details-description {
+  flex: 1 1;
+  margin: 5rem;
+}
+
+.close-modal {
+  position: absolute;
+  right: 1rem;
+  top: 2.5rem;
+  z-index: 1000;
+  background-color: white;
+  border: hidden;
+}
