--- a/src/componets/product/products.css
+++ b/src/componets/product/products.css
@@ -77,3 +77,42 @@
   background-color: white;
   border: hidden;
 }
+.center{
+  width: 100%;
+  position: fixed; /* or absolute */
+  top: 40%;
+  left: 35%;
+}
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  /* margin: 15rem auto; */
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid rgb(2, 19, 44);
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
