--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ header {
   grid-area: header;
   background-color: #203040;
   display: flex;
+  justify-content:space-between;
   align-items: center;
   padding: 0.5rem;
 }
@@ -47,6 +48,9 @@ header a {
 }
 a {
   text-decoration: none;
+}
+.cartAdmin a{
+  margin: 0 20px;
 }
 main {
   grid-area: main;
