--- a/src/index.css
+++ b/src/index.css
@@ -62,8 +62,13 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+  height: 50px;
 }
-
+body.modal-open {
+  /* height: 100vh; */
+  /* overflow-y: hidden; */
+}
 .content {
   display: flex;
   flex-wrap: wrap;
@@ -79,4 +84,7 @@ footer {
 .horizontalLine {
   border-bottom: 2px solid rgba(119, 117, 117, 0.47);
   margin: 10px 50px;
+}
+.ReactModal__Body--open {
+  overflow-y: hidden;
 }
